--- a/style/general.css
+++ b/style/general.css
@@ -1,6 +1,64 @@
-
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+}
+
+
+/* Skeleton styling for all content */
+.skeleton {
+    background: #232025;
+    border-radius: 8px;
+    position: relative;
+    overflow: hidden;
+}
+
+/* Shimmer animation */
+.skeleton::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -150px;
+    height: 100%;
+    width: 150px;
+    background: linear-gradient(45deg,
+            rgba(86, 86, 86, 0) 0%,
+            rgba(28, 28, 28, 0.6) 50%,
+            rgba(255, 255, 255, 0) 100%);
+    animation: loading 1.5s infinite;
+}
+
+/* Placeholder sizes */
+.movie-poster.skeleton {
+    width: 100%;
+    height: 300px;
+    margin-bottom: 12px;
+}
+
+.movie-title.skeleton {
+    width: 80%;
+    height: 20px;
+    margin-bottom: 8px;
+}
+
+.movie-details .movie-year.skeleton,
+.movie-details .movie-rating.skeleton {
+    width: 40%;
+    height: 20px;
+    margin-bottom: 4px;
+}
+
+/* Animation keyframes */
+@keyframes loading {
+    0% {
+        left: -150px;
+    }
+
+    50% {
+        left: 100%;
+    }
+
+    100% {
+        left: 100%;
+    }
 }
