--- a/style/general.css
+++ b/style/general.css
@@ -7,6 +7,8 @@
 
 /* Skeleton styling for all content */
 .skeleton {
+
+
     background: #232025;
     border-radius: 8px;
     position: relative;
@@ -33,6 +35,7 @@
     width: 100%;
     height: 300px;
     margin-bottom: 12px;
+    width: 170px;
 }
 
 .movie-title.skeleton {
