--- a/style/general.css
+++ b/style/general.css
@@ -65,3 +65,19 @@
         left: 100%;
     }
 }
+
+
+/* back button */
+
+.back-button {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    font-size: 23px;
+    margin: 10px;
+    background-color: transparent;
+    border: none;
+    color: white;
+    cursor: pointer;
+    font-weight: 100;
+}
