--- a/style/details.css
+++ b/style/details.css
@@ -8,20 +8,32 @@
 }
 
 .single-movie-title {
+    min-width: 300px;
+    min-height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 8px;
     font-size: 32px;
     font-weight: 900;
 }
 
 .single-movie-year {
+    min-width: 140px;
+    min-height: 30px;
     font-weight: 100;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 22px;
     color: rgb(89, 99, 93);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .single-movie-poster {
-    width: 100%;
-    /* height: 400px; */
+    margin-top: 10px;
+    width: 300px;
+    height: 400px;
     padding: 5px;
     border-radius: 20px;
     display: flex;
@@ -45,6 +57,11 @@
 }
 
 .single-movie-language {
+    min-width: 80px;
+    min-height: 20px;
+    font-weight: 100;
+    align-items: center;
+    justify-content: center;
     font-size: 18px;
     color: rgb(255, 255, 255);
     margin: 3px 5px;
@@ -53,13 +70,23 @@
 }
 
 .single-movie-genre {
+    min-width: 80px;
+    min-height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-weight: 100;
     font-size: 14px;
-    margin: 0px 5px;
+    margin: 8px 5px;
     color: rgb(74, 81, 78);
 }
 
 .single-movie-rating {
+    min-width: 60px;
+    min-height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 60px;
     display: flex;
     gap: 5px;
@@ -125,12 +152,21 @@
 
 
 @media (min-width: 480px) {
+    .single-movie-container {
+        margin-top: -30px;
+    }
+
     .single-movie-title {
-        font-size: 44px;
+        font-size: 40px;
     }
 
     .single-movie-year {
         font-size: 28px;
+    }
+
+    .single-movie-poster {
+        width: 380px;
+        height: 500px;
     }
 
     .single-movie-poster img {
