--- a/style/details.css
+++ b/style/details.css
@@ -14,14 +14,14 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 8px;
-    font-size: 32px;
+    font-size: 26px;
     font-weight: 900;
 }
 
 .single-movie-year {
     min-width: 140px;
     min-height: 30px;
-    font-weight: 100;
+    font-weight: 600;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -32,7 +32,7 @@
 
 .single-movie-poster {
     margin-top: 10px;
-    width: 300px;
+    width: 245px;
     height: 400px;
     padding: 5px;
     border-radius: 20px;
@@ -41,14 +41,14 @@
 }
 
 .single-movie-poster img {
-    width: 300px;
+    width: 245px;
     height: 400px;
 
     border-radius: 20px;
 }
 
 .single-movie-detail {
-    width: 300px;
+    width: 245px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -62,7 +62,7 @@
     font-weight: 100;
     align-items: center;
     justify-content: center;
-    font-size: 23px;
+    font-size: 20px;
     color: rgb(255, 255, 255);
     margin: 3px 5px;
     margin-top: 10px;
@@ -75,8 +75,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-weight: 100;
-    font-size: 19px;
+    font-weight: 500;
+    font-size: 18px;
     margin: 8px 5px;
     color: rgb(74, 81, 78);
 }
@@ -90,7 +90,7 @@
     width: 60px;
     display: flex;
     gap: 5px;
-    font-size: 20px;
+    font-size: 16px;
     align-items: center;
 }
 
@@ -108,7 +108,7 @@
 
 .single-movie-desc {
     color: rgb(92, 82, 82);
-    font-weight: 100;
+
     font-size: 17px;
     min-height: 100px;
     margin-top: 10px;
@@ -122,19 +122,29 @@
     justify-content: center;
     align-items: center;
     padding: 0px 10px;
+    width: 100%;
 }
 
 .single-movie-cast-title {
     font-weight: 900;
     font-size: 23px;
+
 }
 
 .cast-box {
-    margin-top: 10px;
-    width: 300px;
+    border: 1px solid #2b2b2d;
+    min-width: 280px;
+    width: 90%;
+    margin: 10px 10px;
+    height: 80px;
+    background-color: #151521;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    gap: 15px;
+    padding: 10px;
+    border-radius: 10px;
+
+    margin-bottom: 10px;
 }
 
 .cast-img-box {
@@ -165,15 +175,15 @@
     }
 
     .single-movie-title {
-        font-size: 40px;
+        font-size: 30px;
     }
 
     .single-movie-year {
-        font-size: 28px;
+        font-size: 26px;
     }
 
     .single-movie-poster {
-        width: 380px;
+        width: 310px;
         height: 500px;
     }
 
@@ -213,8 +223,17 @@
         font-size: 28px;
     }
 
-    .cast-box {
-        width: 380px;
-        margin-bottom: 10px;
+
+}
+
+@media (min-width: 768px) {
+    .single-movie-desc-box div {
+        font-size: 30px;
     }
+
+    .single-movie-desc {
+        font-size: 20px;
+    }
+
+
 }
